feat: working fonts

--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 
     <!-- reset css -->
     <link rel="stylesheet" href="./vendor/reset_css/reset.css" />
+    <link rel="stylesheet" href="./fonts_loader/fonts.css" />
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <div id="container">
         <h1>Selina Strobel</h1>
-        <!-- <img src="./portfolio_pages/SelinaStrobel_Portfolio - English_1.svg" alt="page 1"> -->
-        <object class="page" data="./portfolio_pages/SelinaStrobel_Portfolio - English_1.svg"
+        <object class="page" data="./portfolio_pages_out/SelinaStrobel_Portfolio - English_1.svg"
             type="image/svg+xml"></object>
-        <object class="page" data="./portfolio_pages/SelinaStrobel_Portfolio - English_2.svg"
+        <object class="page" data="./portfolio_pages_out/SelinaStrobel_Portfolio - English_2.svg"
             type="image/svg+xml"></object>
-        <object class="page" data="./portfolio_pages/SelinaStrobel_Portfolio - English_3.svg"
+        <object class="page" data="./portfolio_pages_out/SelinaStrobel_Portfolio - English_3.svg"
             type="image/svg+xml"></object>
-        <object class="page" data="./portfolio_pages/SelinaStrobel_Portfolio - English_4.svg"
+        <object class="page" data="./portfolio_pages_out/SelinaStrobel_Portfolio - English_4.svg"
             type="image/svg+xml"></object>
-        <object class="page" data="./portfolio_pages/SelinaStrobel_Portfolio - English_5.svg"
+        <object class="page" data="./portfolio_pages_out/SelinaStrobel_Portfolio - English_5.svg"
             type="image/svg+xml"></object>
-        <object class="page" data="./portfolio_pages/SelinaStrobel_Portfolio - English_6.svg"
+        <object class="page" data="./portfolio_pages_out/SelinaStrobel_Portfolio - English_6.svg"
             type="image/svg+xml"></object>
         <footer id="footer">
             mail@selina-strobel.de ©2025 | All Rights Reserved
